--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ body{
     border: 2px solid #DFAA5B;
     background-color: #fff;
     margin-right: 13px;
+    font-size:18px;
+}
+.hotel-booking{
+    display: flex;
 }
 .hotel-booking input {
     padding: 15px 10px;
@@ -73,4 +77,58 @@ body{
     width: 192px;
     height: 60px;
     margin-right: 13px;
+}
+
+/* start new section of gallery  */
+
+.hotel-booking p{
+    background-color: #fff;
+    color: #000;
+    padding: 15px 10px;
+    border-radius: 20px;
+    border: 2px solid #DFAA5B;
+    width: 192px;
+    height: 60px;
+}
+
+.banner{
+    background-image: url(../images/banner.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 790px;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.banner h1, p{
+    color: #fff;
+    font-size: 24px;
+}
+.banner h1{
+    font-size:5em;
+    font-weight: 550;
+    line-height: 106.41px;
+}
+
+.service{
+    width:90%;
+    height: 289px;
+    margin:auto;
+    position: relative;
+    top:-190px;
+    
+}
+.btn-explore{
+    background-color: #DFAA5B;
+    color:#fff;
+    padding: 13px 80px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    border:none;
+}
+.title-facilities{
+    color:#DFAA5B;
 }
